--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   },
   "author": "zhukovsd",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
-    "express": "^4.15.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "express": "^4.15.2",
     "watchify": "^3.9.0"
   },
   "babel": {
